# fuel_optimizer

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  us.json
config/: settings.py  urls.py
config/settings/: base.py  local.py
fuel_optimizer/planner/: apps.py  urls.py  utils.py  views.py
fuel_optimizer/routing/: admin.py  apps.py  models.py  serializers.py  service.py
fuel_optimizer/routing/migrations/: 0001_initial.py
fuel_optimizer/stations/: admin.py  apps.py  models.py  queries.py
fuel_optimizer/stations/management/commands/: geocode_stations.py  load_fuel_prices.py  load_us_states.py
fuel_optimizer/stations/migrations/: 0001_initial.py  0002_usstate.py
scripts/: entrypoint.sh  production_data.py
